# SLI_compatible

./: .gitignore  CMakeLists.txt  README.txt  SLI_compatible.cpp  SLI_compatible.h  container.cpp  container.h  queue_adapter.h
SLI_compatible/: CMakeLists.txt  SLI_compatible.cpp  SLI_compatible.h
container/: container.cpp  container.h  queue_adapter.h
